--- a/config.toml
+++ b/config.toml
@@ -1,5 +1,5 @@
 site_title = "MyArxiv"
-limit_days = 7
+limit_days = 30
 cache_url = "https://gipbear.github.io/MyArxiv/cache.json"
 
 [[sources]]
@@ -9,8 +9,8 @@ title = "Computation and Language"
 
 [[sources]]
 limit = 150
-category = "cs.CV"
-title = "Computer Vision and Pattern Recognition"
+category = "cs.AI"
+title = "Artificial Intelligence"
 
 [[sources]]
 limit = 150
@@ -24,8 +24,8 @@ title = "Machine Learning"
 
 [[sources]]
 limit = 150
-category = "cs.MM"
-title = "Multimedia"
+category = "cs.DS"
+title = "Data Structures and Algorithms"
 
 [scripts]
 highlight_title = "scripts/highlight_title.rhai"
